--- a/OrdenSuprema/package.json
+++ b/OrdenSuprema/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "express": "^4.21.2",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
+    "mysql2": "^3.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "sequelize": "^6.37.5",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
