--- a/OrdenSuprema/package.json
+++ b/OrdenSuprema/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
+    "pg": "^8.13.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
