--- a/OrdenSuprema/package.json
+++ b/OrdenSuprema/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "flowbite": "^3.1.2",
