--- a/OrdenSuprema/package.json
+++ b/OrdenSuprema/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.8.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
     "pg": "^8.13.3",
