Configuracion DB supabase

--- a/OrdenSuprema/.env
+++ b/OrdenSuprema/.env
@@ -1,4 +1,5 @@
 JWT_SECRET="arepitacomqueso"
 EMAIL_USER="ordensupremaadm@gmail.com"
 EMAIL_PASS="coekepsavmsfopqn"
+DATABASE_URL=postgresql://postgres:OrdenSuprema@db.auxdydmspcvcujckmbny.supabase.co:5432/postgres
 
