--- a/OrdenSuprema/.env
+++ b/OrdenSuprema/.env
@@ -1,5 +1,5 @@
 JWT_SECRET="arepitacomqueso"
 EMAIL_USER="ordensupremaadm@gmail.com"
 EMAIL_PASS="coekepsavmsfopqn"
-DATABASE_URL=postgresql://postgres:OrdenSuprema@db.auxdydmspcvcujckmbny.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.auxdydmspcvcujckmbny:OrdenSuprema@aws-0-us-west-1.pooler.supabase.com:6543/postgres
 
