--- a/OrdenSuprema/package.json
+++ b/OrdenSuprema/package.json
@@ -22,6 +22,7 @@
     "flowbite-react": "^0.10.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
